--- a/src/PaddleOcr.Inference/PaddleOcr.Inference.csproj
+++ b/src/PaddleOcr.Inference/PaddleOcr.Inference.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.24.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
   </ItemGroup>
 
   <PropertyGroup>
