--- a/tests/PaddleOcr.Tests/PaddleOcr.Tests.csproj
+++ b/tests/PaddleOcr.Tests/PaddleOcr.Tests.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\..\src\PaddleOcr.Core\PaddleOcr.Core.csproj" />
     <ProjectReference Include="..\..\src\PaddleOcr.Config\PaddleOcr.Config.csproj" />
     <ProjectReference Include="..\..\src\PaddleOcr.Tools\PaddleOcr.Tools.csproj" />
+    <ProjectReference Include="..\..\src\PaddleOcr.Inference\PaddleOcr.Inference.csproj" />
   </ItemGroup>
 
 </Project>
