--- a/src/PaddleOcr.ServiceClient/PaddleOcr.ServiceClient.csproj
+++ b/src/PaddleOcr.ServiceClient/PaddleOcr.ServiceClient.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
   </ItemGroup>
 
   <PropertyGroup>
