--- a/src/PaddleOcr.Export/PaddleOcr.Export.csproj
+++ b/src/PaddleOcr.Export/PaddleOcr.Export.csproj
@@ -6,6 +6,10 @@
     <ProjectReference Include="..\PaddleOcr.Models\PaddleOcr.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.24.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
