feat: add plugin runtime loader abstraction for inference extensions

--- a/src/PaddleOcr.Plugins/PaddleOcr.Plugins.csproj
+++ b/src/PaddleOcr.Plugins/PaddleOcr.Plugins.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PaddleOcr.Core\PaddleOcr.Core.csproj" />
+    <ProjectReference Include="..\PaddleOcr.Inference\PaddleOcr.Inference.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
