feat(rec): complete phases in rec_model_full_alignment and enhance RecModelBuilder with new architectures and head configurations

--- a/src/PaddleOcr.Data/PaddleOcr.Data.csproj
+++ b/src/PaddleOcr.Data/PaddleOcr.Data.csproj
@@ -1,8 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\PaddleOcr.Core\PaddleOcr.Core.csproj" />
     <ProjectReference Include="..\PaddleOcr.Config\PaddleOcr.Config.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
   </ItemGroup>
 
   <PropertyGroup>
