--- a/assets/configs/local/rec_ppocrv5_mini_train.yml
+++ b/assets/configs/local/rec_ppocrv5_mini_train.yml
@@ -1,8 +1,13 @@
+# PP-OCRv5 mobile rec - tiny CI-fast config
+# Architecture: PPLCNetV3 + SVTR encoder + MultiHead (CTC + NRTR) + MultiLoss
+# This is a minimal config for testing the PP-OCRv5 architecture pipeline.
+# Not intended for production training.
+
 Global:
   device: cuda
   use_amp: false
-  epoch_num: 50
-  save_model_dir: ./output/rec_ic15_mini
+  epoch_num: 5
+  save_model_dir: ./output/rec_ppocrv5_mini
   resume_training: false
   save_epoch_step: 1
   print_batch_step: 1
@@ -13,12 +18,13 @@ Global:
   save_batch_model: false
   min_improve_delta: 0.0001
   character_dict_path: assets/dicts/ppocrv5_en_dict.txt
-  max_text_length: 25
+  max_text_length: &max_text_length 25
   use_space_char: true
   seed: 1024
   deterministic: true
   charset_coverage_fail_fast: false
   charset_max_unknown_ratio: 0.1
+  d2s_train_image_shape: [3, 48, 320]
 
 Optimizer:
   name: Adam
@@ -27,29 +33,41 @@ Optimizer:
   lr:
     name: Cosine
     learning_rate: 0.0005
-    warmup_epoch: 5
-  grad_clip_norm: 0
+    warmup_epoch: 2
+  grad_clip_norm: 5.0
   regularizer:
     name: L2
-    factor: 0.00001
+    factor: 0.00003
 
 Architecture:
   model_type: rec
-  algorithm: CRNN
+  algorithm: SVTR_LCNet
+  Transform:
   Backbone:
-    name: MobileNetV3
-    scale: 0.5
-    model_name: small
-  Neck:
-    name: SequenceEncoder
-    encoder_type: rnn
-    hidden_size: 48
+    name: PPLCNetV3
+    scale: 0.95
   Head:
-    name: CTCHead
-    fc_decay: 0.00001
+    name: MultiHead
+    head_list:
+      - CTCHead:
+          Neck:
+            name: svtr
+            dims: 120
+            depth: 2
+            hidden_dims: 120
+            kernel_size: [1, 3]
+            use_guide: true
+          Head:
+            fc_decay: 0.00001
+      - NRTRHead:
+          nrtr_dim: 384
+          max_text_length: *max_text_length
 
 Loss:
-  name: CTCLoss
+  name: MultiLoss
+  loss_config_list:
+    - CTCLoss:
+    - NRTRLoss:
 
 PostProcess:
   name: CTCLabelDecode
@@ -68,20 +86,22 @@ Train:
       - DecodeImage:
           img_mode: BGR
           channel_first: false
-      - RecAug:
-      - CTCLabelEncode:
+      - MultiLabelEncode:
+          gtc_encode: NRTRLabelEncode
       - RecResizeImg:
           image_shape: [3, 48, 320]
       - KeepKeys:
           keep_keys:
             - image
-            - label
+            - label_ctc
+            - label_gtc
             - length
+            - valid_ratio
   loader:
-    batch_size_per_card: 16
+    batch_size_per_card: 8
     shuffle: true
     drop_last: false
-    num_workers: 4
+    num_workers: 2
 
 Eval:
   dataset:
@@ -93,16 +113,19 @@ Eval:
       - DecodeImage:
           img_mode: BGR
           channel_first: false
-      - CTCLabelEncode:
+      - MultiLabelEncode:
+          gtc_encode: NRTRLabelEncode
       - RecResizeImg:
           image_shape: [3, 48, 320]
       - KeepKeys:
           keep_keys:
             - image
-            - label
+            - label_ctc
+            - label_gtc
             - length
+            - valid_ratio
   loader:
-    batch_size_per_card: 16
+    batch_size_per_card: 8
     shuffle: false
     drop_last: false
     num_workers: 2
